--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
     "jss": "^9.3.3",
-    "material-ui": "^0.19.4",
+    "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.17",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
