--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jss": "^9.3.3",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.17",
+    "mongoose": "^4.13.5",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-jss": "^8.1.0",
@@ -75,7 +76,9 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": ["react-app"]
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
