--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "concurrently \"npm run start:front-end\" \"npm run start:node\"",
     "start:front-end": "node scripts/start.js",
     "start:node": "NODE_ENV=development nodemon index.js --exec babel-node --presets es2015,stage-2",
-    "build": "node scripts/build.js && npm run node-build",
+    "build": "node scripts/build.js && npm run build:node",
     "build:node": "NODE_ENV=production babel server -d build --presets es2015,stage-2",
     "node:prod": "NODE_ENV=production nodemon build/index.js",
     "deploy": "NODE_ENV=production pm2 start build/index.js --name app",
@@ -76,9 +76,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"]
   },
   "eslintConfig": {
     "extends": "react-app"
