--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.0",
+    "http": "^0.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jss": "^9.3.3",
     "material-ui": "next",
@@ -30,7 +31,9 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
@@ -76,7 +79,9 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": ["react-app"]
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
