--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start:front-end": "node scripts/start.js",
     "start:node": "NODE_ENV=development nodemon index.js --exec babel-node --presets es2015,stage-2",
     "build": "node scripts/build.js && npm run build:node",
-    "build:node": "NODE_ENV=production babel server -d build --presets es2015,stage-2",
-    "node:prod": "NODE_ENV=production nodemon build/index.js",
-    "deploy": "NODE_ENV=production pm2 start build/index.js --name app",
+    "build:node": "NODE_ENV=production babel server -d build/server --presets es2015,stage-2",
+    "node:prod": "NODE_ENV=production nodemon build/server/index.js",
+    "deploy": "NODE_ENV=production pm2 start build/server/index.js --name app",
     "stop": "pm2 stop app"
   },
   "proxy": "http://localhost:8000",
@@ -79,9 +79,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"]
   },
   "eslintConfig": {
     "extends": "react-app"
