--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "proxy": "http://localhost:8000",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.0",
@@ -79,7 +80,9 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": ["react-app"]
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
