--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy": "NODE_ENV=production pm2 start build/server/index.js --name app",
     "stop": "pm2 stop app"
   },
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:7000",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
@@ -80,9 +80,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"]
   },
   "eslintConfig": {
     "extends": "react-app"
