--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "concurrently \"npm run start:front-end\" \"npm run start:node\"",
     "start:front-end": "node scripts/start.js",
-    "start:node": "NODE_ENV=development nodemon index.js --exec babel-node --presets es2015,stage-2",
+    "start:node": "cross-env NODE_ENV=development nodemon index.js --exec babel-node --presets es2015,stage-2",
     "build": "node scripts/build.js && npm run build:node",
-    "build:node": "NODE_ENV=production babel server -d build/server --presets es2015,stage-2",
-    "node:prod": "NODE_ENV=production nodemon build/server/index.js",
-    "deploy": "NODE_ENV=production pm2 start build/server/index.js --name app",
+    "build:node": "cross-env NODE_ENV=production babel server -d build/server --presets es2015,stage-2",
+    "node:prod": "cross-env NODE_ENV=production nodemon build/server/index.js",
+    "deploy": "cross-env NODE_ENV=production pm2 start build/server/index.js --name app",
     "stop": "pm2 stop app"
   },
   "proxy": "http://localhost:8000",
@@ -50,6 +50,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "concurrently": "^3.5.1",
+    "cross-env": "^5.1.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
