--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.13.5",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-grid-gallery": "^0.4.7",
     "react-jss": "^8.1.0",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
