--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "formidable": "^1.1.1",
     "glamor": "^2.20.40",
     "glamorous": "^4.11.0",
     "http": "^0.0.0",
