--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "node scripts/build.js && npm run build:node",
     "build:node": "cross-env NODE_ENV=production babel server -d build/server --presets es2015,stage-2",
     "node:prod": "cross-env NODE_ENV=production nodemon build/server/index.js",
-    "deploy": "cross-env NODE_ENV=production pm2 start build/server/index.js --name app",
+    "deploy": "NODE_ENV=production pm2 start build/server/index.js --name app",
     "stop": "pm2 stop app"
   },
   "proxy": "http://localhost:8000",
@@ -83,9 +83,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"]
   },
   "eslintConfig": {
     "extends": "react-app"
